--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
 
             .wrapper {
                 display: flex;
-                border: 1px solid green;
+                border: 1px solid blue;
                 width: 100%;
                 box-sizing: border-box;
             }
